# custom_claude_workflow

./: .gitignore  CLAUDE.md  README.md  main.py  mcp.json  setting.json  settings.json
commands/: check-architecture.md  clarify-requirements.md  create-acceptance-tests.md  create-integration-tests.md  design-architecture.md  dev-flow.md  hotel-search.md  implement-logic.md  implement-signatures.md  plan-implementation.md  project_status.md  resume-from-issue.md  test_ontology_decompose.md  update-issue.md  verify-red-phase.md
commands/development_planning_v3/: phase1-step1.md  phase1-step2.md  phase1-step3.md  phase2-step1.md  phase2-step2.md  phase2-step3.md  phase3-step1.md  phase3-step2.md
commands/travel_planning/: phase1-step1-planning.md  phase1-step1.md  phase2-step1-transport-sightseeing.md  phase2-step1.md  phase2-step2-itinerary-draft.md  phase2-step3-hotel-search.md  phase3-step1-schedule-detail.md  phase3-step1.md  phase3-step2-final-prep.md  plan-booking.md  plan-concept.md  plan-destination.md  plan-itinerary.md  plan-preparation.md
commands/v0/: clarify-requirements.md  create-analysis-report.md  define-acceptance-criteria.md  design-architecture.md  dev-flow.md  implement-logic.md
commands/v1/: analyze-change-request-with-issue.md  (+6 more)
raw_idea/: decompose_strategy.md
slash_command_generator/: README.md  generator.py  pyproject.toml
slash_command_generator/configs/: software-dev.yaml  travel-planning.yaml
slash_command_generator/configs/v3/: config.yaml
slash_command_generator/templates/v3/: template.md
v3_command_generator/: generator.py
(+28 files in other folders)
